--- a/new.html
+++ b/new.html
@@ -68,6 +68,7 @@ section button:hover {
   <section>
 <button id="js-trigger-overlay" type="button">開始反波膽</button>
   </section>
+    <iframe src="http://www.91lym.com/" width="100%" height="1000px"></iframe><br>
 </body>
 <script>
 $("#js-trigger-overlay").click(function(){
@@ -84,7 +85,6 @@ window.open('https://b9.ifa.plus/', 'b9');
 window.open('https://b10.ifa.plus/', 'b10');
 window.open('https://b11.ifa.plus/', 'b11');
 window.open('https://b12.ifa.plus/', 'b12');
-window.open('http://www.91lym.com/', '魔方');
 });
 </script>
 </html>
