--- a/new.html
+++ b/new.html
@@ -68,7 +68,7 @@ section button:hover {
   <section>
 <button id="js-trigger-overlay" type="button">開始反波膽</button>
   </section>
-    <iframe src="http://www.91lym.com/" width="100%" height="1000px"></iframe><br>
+    <iframe src="//www.91lym.com/" width="100%" height="1000px"></iframe><br>
 </body>
 <script>
 $("#js-trigger-overlay").click(function(){
