--- a/26381212092232021312.html
+++ b/26381212092232021312.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh_TW">
 	<head>
-		<title>&#26381;&#21209;&#22320;&#21312; - 蜜糖 SGS66-&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305;</title>
+		<title>&#26381;&#21209;&#22320;&#21312; - 絕品 s686vip-&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305;</title>
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -153,7 +153,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 
 	<a href="">
 	
-	<span id="wsite-title">蜜糖 SGS66 -&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305;</span>
+	<span id="wsite-title">絕品 s686vip -&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305;</span>
 	
 	</a>
 
@@ -341,7 +341,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 <div class="paragraph" style="text-align:center;"><strong><font color="#626262"><font size="5"><font><font><font>&#20013;&#23665;/&#26032;&#29983;&#21271;/&#26519;&#26862;&#21271;/&#22823;&#21516;/&#20013;&#27491;/&#35199;&#38272;/&#33836;&#33775;</font></font></font></font><br /><font size="5"><font><font>&#26495;&#27211;/&#19977;&#37325;/&#34310;&#27954;</font></font></font></font></strong><strong style="color:rgb(63, 63, 63)"><font color="#626262"><font size="5">/&#27704;&#21644;/&#20013;&#21644;</font></font></strong><strong><font color="#626262"><font size="5"><font><font>/&#27193;&#26519;/&#26519;&#21475;/&#27728;&#27490;/&#22522;&#38534;</font></font></font><br /><font size="5"><font><font><font>&#23452;&#34349;/&#26691;&#22290;/</font></font></font></font></font></strong><strong style="color:rgb(63, 63, 63)"><font color="#626262"><font size="5">&#20013;&#22754;/</font></font></strong><strong><font color="#626262"><font size="5"><font><font><font>&#21335;&#23809;/&#40845;&#28525;/&#26954;&#26757;/&#26032;&#31481;/&#33495;&#26647;/&#21488;&#20013;<br />&#24432;&#21270;/&#38642;&#26519;/&#22025;&#32681;/&#21488;&#21335;/&#39640;&#38596;</font></font></font></font></font></strong></div>
 
 <div style="text-align:center;"><div style="height: 10px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-small wsite-button-highlight" href="https://line.me/ti/p/tKv2rs6mhJ"  onclick="gtag('event', '加好友', {'event_category' : '點擊', 'event_label' : '服務地區'});" >
+<a class="wsite-button wsite-button-small wsite-button-highlight" href="https://line.me/ti/p/8v3QH3NN68"  onclick="gtag('event', '加好友', {'event_category' : '點擊', 'event_label' : '服務地區'});" >
 <span class="wsite-button-inner">加好友看更多</span>
 </a>
 <div style="height: 10px; overflow: hidden;"></div></div>
@@ -455,7 +455,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 </div>
 
   <div class="mini-cart-overlay"></div>
-<a target="_blank" href="https://line.me/ti/p/tKv2rs6mhJ" onclick="gtag('event', '加好友', {'event_category' : '點擊', 'event_label' : '服務地區-固定'});"><div class="fixedAddFri"><img src="addfir2.png" style="width: 100%; "></div></a>
+<a target="_blank" href="https://line.me/ti/p/8v3QH3NN68" onclick="gtag('event', '加好友', {'event_category' : '點擊', 'event_label' : '服務地區-固定'});"><div class="fixedAddFri"><img src="addfir2.png" style="width: 100%; "></div></a>
 <link rel="stylesheet" type="text/css" href="custom.css?t=11111">
   <script src="files/theme/plugins.js"></script>
   <script src="files/theme/jquery.pxuMenu.js"></script>
