--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh_TW">
 	<head>
-		<title>蜜糖 sgs66-&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305; - &#39318;&#38913;</title>
-<meta name="description" content="優質精選獨家好妹 不怕再踩雷！找糖糖嚴選定點樓鳳/泰洗/泡泡浴幫你安排 讓你做夢都會笑～即刻加 LINE 【TEASG99】享受歡樂時光～" />
+		<title>絕品 s686vip-&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305; - &#39318;&#38913;</title>
+<meta name="description" content="優質精選獨家好妹 不怕再踩雷！找糖糖嚴選定點樓鳳/泰洗/泡泡浴幫你安排 讓你做夢都會笑～即刻加 LINE 【s686vip】享受歡樂時光～" />
 <meta name="keywords" content="色情,巨乳,女僕,全套,做愛,定點,樓鳳,外送,泰洗,桑拿,口爆,小模,洋妞,俄羅斯妹妹,金絲貓,東南亞妹妹,東莞桑拿,一條龍,台北按摩,泡泡浴,泰國浴,泰洗,奶浴,奶洗,奶泡,半套,走後門,無套做,免房費" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -139,7 +139,7 @@ var STYLE_PREFIX = 'wsite';
 
 	<a href="">
 	
-	<span id="wsite-title">蜜糖 sgs66 -&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305;</span>
+	<span id="wsite-title">絕品 s686vip -&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305;</span>
 	
 	</a>
 
@@ -357,7 +357,7 @@ var STYLE_PREFIX = 'wsite';
 			<input type="hidden" name="ucfid" value="120149829353888199" />
 			<input type="hidden" name="recaptcha_token"/>
 			<input type="submit" role="button" aria-label="點擊加好友" value="點擊加好友" style="position:absolute;top:0;left:-9999px;width:1px;height:1px" />
-<a class="wsite-button wsite-button-small wsite-button-normal" onclick="aclick();" target="_blank" href="https://line.me/ti/p/tKv2rs6mhJ" >
+<a class="wsite-button wsite-button-small wsite-button-normal" onclick="aclick();" target="_blank" href="https://line.me/ti/p/8v3QH3NN68" >
 <span class="wsite-button-inner">點擊加好友</span>
 </a>
 		</div>
@@ -701,7 +701,7 @@ var STYLE_PREFIX = 'wsite';
   <script src="files/theme/jquery.revealer.js"></script>
   <script src="files/theme/custom-1.js"></script>
     <div id="customer-accounts-app"></div>
-<a target="_blank" href="https://line.me/ti/p/tKv2rs6mhJ" onclick="gtag('event', '加好友', {'event_category' : '點擊', 'event_label' : '首頁-固定'});"><div class="fixedAddFri"><img src="addfir2.png" style="width: 100%; "></div></a>
+<a target="_blank" href="https://line.me/ti/p/8v3QH3NN68" onclick="gtag('event', '加好友', {'event_category' : '點擊', 'event_label' : '首頁-固定'});"><div class="fixedAddFri"><img src="addfir2.png" style="width: 100%; "></div></a>
 <link rel="stylesheet" type="text/css" href="custom.css?t=11111">
 	</body>
 </html>
