--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh_TW">
 	<head>
-		<title>絕品 s686vip-&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305; - &#39318;&#38913;</title>
+		<title>蜜糖 sgs66-&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305; - &#39318;&#38913;</title>
 <meta name="description" content="優質精選獨家好妹 不怕再踩雷！找糖糖嚴選定點樓鳳/泰洗/泡泡浴幫你安排 讓你做夢都會笑～即刻加 LINE 【s686vip】享受歡樂時光～" />
 <meta name="keywords" content="色情,巨乳,女僕,全套,做愛,定點,樓鳳,外送,泰洗,桑拿,口爆,小模,洋妞,俄羅斯妹妹,金絲貓,東南亞妹妹,東莞桑拿,一條龍,台北按摩,泡泡浴,泰國浴,泰洗,奶浴,奶洗,奶泡,半套,走後門,無套做,免房費" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -139,7 +139,7 @@ var STYLE_PREFIX = 'wsite';
 
 	<a href="">
 	
-	<span id="wsite-title">絕品 s686vip -&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305;</span>
+	<span id="wsite-title">蜜糖 sgs66 -&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305;</span>
 	
 	</a>
 
@@ -330,7 +330,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:center;"><font color="#a82e2e">&#8203;</font><strong style=""><font color="#c23b3b">&#128286;&#26412;&#24291;&#21578;&#26410;&#28415;18&#27506;&#32773;&#65292;&#35531;&#21247;&#22312;&#27492;&#36887;&#30041;&#65292;&#19981;&#25552;&#20379;&#26410;&#25104;&#24180;&#28040;&#36027;&#128286;&#8203;</font></strong></div>
 
-<h2 class="wsite-content-title" style="text-align:center;"><font color="#2a2a2a" size="7">LINE ID:</font><br />s686vip</h2>
+<h2 class="wsite-content-title" style="text-align:center;"><font color="#2a2a2a" size="7">LINE ID:</font><br />sgs66</h2>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 <a>
@@ -357,7 +357,7 @@ var STYLE_PREFIX = 'wsite';
 			<input type="hidden" name="ucfid" value="120149829353888199" />
 			<input type="hidden" name="recaptcha_token"/>
 			<input type="submit" role="button" aria-label="點擊加好友" value="點擊加好友" style="position:absolute;top:0;left:-9999px;width:1px;height:1px" />
-<a class="wsite-button wsite-button-small wsite-button-normal" onclick="aclick();" target="_blank" href="https://line.me/ti/p/8v3QH3NN68" >
+<a class="wsite-button wsite-button-small wsite-button-normal" onclick="aclick();" target="_blank" href="https://line.me/ti/p/tKv2rs6mhJ" >
 <span class="wsite-button-inner">點擊加好友</span>
 </a>
 		</div>
@@ -433,7 +433,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<div class="paragraph" style="text-align:center;"><strong>爽爽 162/46/真F</strong><br />無套BJ 殘廢澡 激情舌吻 吞蛋舔睪丸 品鮑 69 前戲挑逗 奶泡 按摩舒壓 胸推 深喉嚨 舒麻舌功 冰火 水中蕭 過水愛心 毒龍 絲襪不加價 口爆+500</div>
+<div class="paragraph" style="text-align:center;"><strong>冰恬 158/E/20 小支馬小可愛</strong><br />殘廢澡 無套吹 胸推 臀推 漫遊 冰火 奶炮 口痧 水中蕭 按摩 毒龍(免加價) 口爆(免加價) 可2S 可兼90分(一天限量兩班)</div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:right">
 <a href='uploads/pic190715/c3.jpg' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
@@ -460,7 +460,7 @@ var STYLE_PREFIX = 'wsite';
 </div></div>
 
 <div class="paragraph" style="text-align:center;"><strong>娜塔雅 165/45/34C/22y</strong><br />俄羅斯混血 狂爆小野貓<br>💋親密服務
-👉無套吹/鴛鴦/浴按摩 👉舌吻/品鮑、69 👉可配合情趣用品(限全新未開封) 👉奶炮/胸推/毒龍/口爆+500/自慰秀+500/顏射+500</div>
+👉無套吹/鴛鴦/浴按摩 👉舌吻/品鮑、69 👉奶炮/胸推/毒龍/口爆+500/自慰秀+500/顏射+500</div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 <a href='uploads/1/2/3/1/123123682/f48c19a9f2a26a0f547c8e65d203719e3bf07ca_3.jpg' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
@@ -481,7 +481,7 @@ var STYLE_PREFIX = 'wsite';
 <div class="paragraph" style="text-align:center;"><strong>迪麗熱巴 163-45kg-C</strong><br />港澳混血俄羅斯美女<br>
 舌吻/小親親/帝王殘廢澡/情趣鴛鴦浴/皇式按摩/輕功漫游/360°旋轉BJ/乳交/臀推<br>
 ＊超值免加價服務 提前告知＊<br>
-情趣用品(請自備) 配合變裝(自備服裝) 69舔鮑 水中蕭 奶炮 法式舌吻<br>
+配合變裝(自備服裝) 69舔鮑 水中蕭 奶炮 法式舌吻<br>
 💋口爆+500
 💋顏射+500
 
@@ -701,7 +701,7 @@ var STYLE_PREFIX = 'wsite';
   <script src="files/theme/jquery.revealer.js"></script>
   <script src="files/theme/custom-1.js"></script>
     <div id="customer-accounts-app"></div>
-<a target="_blank" href="https://line.me/ti/p/8v3QH3NN68" onclick="gtag('event', '加好友', {'event_category' : '點擊', 'event_label' : '首頁-固定'});"><div class="fixedAddFri"><img src="addfir2.png" style="width: 100%; "></div></a>
+<a target="_blank" href="https://line.me/ti/p/tKv2rs6mhJ" onclick="gtag('event', '加好友', {'event_category' : '點擊', 'event_label' : '首頁-固定'});"><div class="fixedAddFri"><img src="addfir2.png" style="width: 100%; "></div></a>
 <link rel="stylesheet" type="text/css" href="custom.css?t=11111">
 	</body>
 </html>
