--- a/index_bk.html
+++ b/index_bk.html
@@ -424,7 +424,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<div class="paragraph" style="text-align:center;"><strong>天虹 163 E 22 ⭐顏值高正妹</strong><br />✔舌吻 ✔波推 ✔臀推 ✔鴛鴦浴 ✔69(有吃檳榔不接) ✔指滑 ✔漫遊 ✔過水 ✔舔蛋 ✔無套吹 ✔雙飛 ✔深喉 </div>
+<div class="paragraph" style="text-align:center;"><strong>天虹 163 E 22 ⭐顏值高正妹</strong><br />✔舌吻 ✔波推 ✔臀推 ✔鴛鴦浴 ✔69(有吃檳榔不接) ✔指滑 ✔漫遊 ✔過水 ✔舔蛋 ✔無套吹 ✔雙飛 ✔深喉 ✔口爆+500 ✔絲襪誘惑(客人自備)</div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 <a href='uploads/pic190715/c21.jpg' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
@@ -460,7 +460,7 @@ var STYLE_PREFIX = 'wsite';
 </div></div>
 
 <div class="paragraph" style="text-align:center;"><strong>娜塔雅 165/45/34C/22y</strong><br />俄羅斯混血 狂爆小野貓<br>💋親密服務
-👉無套吹/鴛鴦/浴按摩 👉舌吻/品鮑、69 </div>
+👉無套吹/鴛鴦/浴按摩 👉舌吻/品鮑、69 👉奶炮/胸推/毒龍/口爆+500/自慰秀+500/顏射+500</div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 <a href='uploads/1/2/3/1/123123682/f48c19a9f2a26a0f547c8e65d203719e3bf07ca_3.jpg' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
@@ -479,9 +479,11 @@ var STYLE_PREFIX = 'wsite';
 </div></div>
 
 <div class="paragraph" style="text-align:center;"><strong>迪麗熱巴 163-45kg-C</strong><br />港澳混血俄羅斯美女<br>
-舌吻/小親親/帝王殘廢澡/鴛鴦浴/皇式按摩/輕功漫游/360°旋轉BJ/乳交/臀推<br>
+舌吻/小親親/帝王殘廢澡/情趣鴛鴦浴/皇式按摩/輕功漫游/360°旋轉BJ/乳交/臀推<br>
 ＊超值免加價服務 提前告知＊<br>
-配合變裝(自備服裝) 69舔鮑 水中蕭 奶炮 法式舌吻
+配合變裝(自備服裝) 69舔鮑 水中蕭 奶炮 法式舌吻<br>
+💋口爆+500
+💋顏射+500
 
 </div>
 
