--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<div class="paragraph" style="text-align:center;"><strong>天虹 163 E 22 ⭐顏值高正妹</strong><br />✔舌吻 ✔波推 ✔臀推 ✔鴛鴦浴 ✔69(有吃檳榔不接) ✔指滑 ✔漫遊 ✔過水 ✔舔蛋 ✔無套吹 ✔雙飛 ✔深喉 </div>
+<div class="paragraph" style="text-align:center;"><strong>天虹 163 E 22 ⭐顏值高正妹</strong><br /> </div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 <a href='uploads/pic190715/c21.jpg' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
@@ -433,7 +433,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<div class="paragraph" style="text-align:center;"><strong>冰恬 158/E/20 小支馬小可愛</strong><br />殘廢澡 無套吹 胸推 臀推 漫遊 冰火 奶炮 口痧 水中蕭 按摩 毒龍(免加價) 口爆(免加價) 可2S 可兼90分(一天限量兩班)</div>
+<div class="paragraph" style="text-align:center;"><strong>冰恬 158/E/20 小支馬小可愛</strong><br /> </div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:right">
 <a href='uploads/pic190715/c3.jpg' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
@@ -442,7 +442,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<div class="paragraph" style="text-align:center;"><strong>新生代演員<br>艾冬禹 168 36(D) 23y 43kg</strong><br />首次來台 體驗台灣哥哥熱情<br>小親 69 無套吹 正常工</div>
+<div class="paragraph" style="text-align:center;"><strong>新生代演員<br>艾冬禹 168 36(D) 23y 43kg</strong><br /> </div>
 
 
 					
@@ -459,8 +459,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<div class="paragraph" style="text-align:center;"><strong>娜塔雅 165/45/34C/22y</strong><br />俄羅斯混血 狂爆小野貓<br>💋親密服務
-👉無套吹/鴛鴦/浴按摩 👉舌吻/品鮑、69 </div>
+<div class="paragraph" style="text-align:center;"><strong>娜塔雅 165/45/34C/22y</strong><br /> </div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 <a href='uploads/1/2/3/1/123123682/f48c19a9f2a26a0f547c8e65d203719e3bf07ca_3.jpg' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
@@ -479,10 +478,7 @@ var STYLE_PREFIX = 'wsite';
 </div></div>
 
 <div class="paragraph" style="text-align:center;"><strong>迪麗熱巴 163-45kg-C</strong><br />港澳混血俄羅斯美女<br>
-舌吻/小親親/帝王殘廢澡/鴛鴦浴/皇式按摩/輕功漫游/360°旋轉BJ/乳交/臀推<br>
-＊超值免加價服務 提前告知＊<br>
-配合變裝(自備服裝) 69舔鮑 水中蕭 奶炮 法式舌吻
-
+ 
 </div>
 
 
@@ -500,8 +496,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<div class="paragraph" style="text-align:center;"><strong>研希 155.43.F《超級粉嫩內裝》</strong><br /> 
-無套吹 - 舌吻 - 皇帝澡 - 奶泡 - 69 - 輕功愛撫</div>
+<div class="paragraph" style="text-align:center;"><strong>研希 155.43.F《超級粉嫩內裝》</strong><br />  </div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:10px;text-align:right">
 <a href='uploads/pic190715/d3.jpg' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
@@ -510,7 +505,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<div class="paragraph" style="text-align:center;"><strong>貓貓 150-40-36D</strong><br /> 殘廢澡 無套吹 69品鮑 漫遊 配合絲襪高跟鞋 角色扮演《請客自備》<span style="color:rgb(63, 63, 63)"></span></div>
+<div class="paragraph" style="text-align:center;"><strong>貓貓 150-40-36D</strong><br />  </div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:right">
 <a href='uploads/pic190715/d2.jpg' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
@@ -519,7 +514,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<div class="paragraph" style="text-align:center;"><strong>愛妃(大眼可愛小女友) 152-42-大D</strong><br />無套吹蕭 薄膜愛愛 深情親嘴 激情深吻(嘴巴乾淨清潔) 鮮嫩品鮑 69體位 奶炮胸推(需先告知) 舒壓按摩 皇上懶人浴 舔蛋蛋(需先告知)</div>
+<div class="paragraph" style="text-align:center;"><strong>愛妃(大眼可愛小女友) 152-42-大D</strong><br /> </div>
 
 
 					
