--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="display:block;font-size:90%"></div>
 </div></div>
 
-<div class="paragraph" style="text-align:center;"><strong>&#33453;&#27604; 166-48-D</strong><br />&#33292;&#21563; &#25140;&#22871;&#21561;&nbsp; &#21697;&#39825; 69 &#20849;&#28020; &#25353;&#25705;</div>
+<div class="paragraph" style="text-align:center;"><strong>芭比 166-48-D</strong><br /> </div>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:right">
 <a href='uploads/pic190715/r2.jpg' rel='lightbox' onclick='if (!lightboxLoaded) return false'>
