--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>絕品 s686vip-&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305; - &#39318;&#38913;</title>
 <meta name="description" content="優質精選獨家好妹 不怕再踩雷！選定點樓鳳/泰洗/泡泡浴幫你安排 讓你做夢都會笑～即刻加 LINE 【s686vip】享受歡樂時光～" />
-<meta name="keywords" content="色情,巨乳,女僕,全套,做愛,定點,樓鳳,外送,泰洗,桑拿,口爆,小模,洋妞,俄羅斯妹妹,金絲貓,東南亞妹妹,東莞桑拿,一條龍,台北按摩,泡泡浴,泰國浴,泰洗,奶浴,奶洗,奶泡,半套,走後門,無套做,免房費" />
+<meta name="keywords" content="" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
