--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:center;"><font color="#a82e2e">&#8203;</font><strong style=""><font color="#c23b3b">&#128286;&#26412;&#24291;&#21578;&#26410;&#28415;18&#27506;&#32773;&#65292;&#35531;&#21247;&#22312;&#27492;&#36887;&#30041;&#65292;&#19981;&#25552;&#20379;&#26410;&#25104;&#24180;&#28040;&#36027;&#128286;&#8203;</font></strong></div>
 
-<h2 class="wsite-content-title" style="text-align:center;"><font color="#2a2a2a" size="7">LINE ID:</font><br />sgs66</h2>
+<h2 class="wsite-content-title" style="text-align:center;"><font color="#2a2a2a" size="7">LINE ID:</font><br />s686vip</h2>
 
 <div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0px;margin-right:0px;text-align:center">
 <a>
@@ -179,7 +179,7 @@ var STYLE_PREFIX = 'wsite';
 			<input type="hidden" name="ucfid" value="120149829353888199" />
 			<input type="hidden" name="recaptcha_token"/>
 			<input type="submit" role="button" aria-label="點擊加好友" value="點擊加好友" style="position:absolute;top:0;left:-9999px;width:1px;height:1px" />
-<a class="wsite-button wsite-button-small wsite-button-normal" onclick="aclick();" target="_blank" href="https://line.me/ti/p/tKv2rs6mhJ" >
+<a class="wsite-button wsite-button-small wsite-button-normal" onclick="aclick();" target="_blank" href="https://line.me/ti/p/8v3QH3NN68" >
 <span class="wsite-button-inner">點擊加好友</span>
 </a>
 		</div>
@@ -460,7 +460,7 @@ var STYLE_PREFIX = 'wsite';
   <script src="files/theme/jquery.revealer.js"></script>
   <script src="files/theme/custom-1.js"></script>
     <div id="customer-accounts-app"></div>
-<a target="_blank" href="https://line.me/ti/p/tKv2rs6mhJ" onclick="gtag('event', '加好友', {'event_category' : '點擊', 'event_label' : '首頁-固定'});"><div class="fixedAddFri"><img src="addfir2.png" style="width: 100%; "></div></a>
+<a target="_blank" href="https://line.me/ti/p/8v3QH3NN68" onclick="gtag('event', '加好友', {'event_category' : '點擊', 'event_label' : '首頁-固定'});"><div class="fixedAddFri"><img src="addfir2.png" style="width: 100%; "></div></a>
 <link rel="stylesheet" type="text/css" href="custom.css?t=11111">
 	</body>
 </html>
