--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh_TW">
 	<head>
-		<title>大台北 s686vip-&#27155;&#40179;/&#23450;&#40670;/&#27888;&#27927;/&#27873;&#27873;&#28020;&#12304;&#20813;&#25151;&#36027;&#12305; - &#39318;&#38913;</title>
-<meta name="description" content="優質精選獨家好妹 不怕再踩雷！選定點樓鳳/泰洗/泡泡浴幫你安排 讓你做夢都會笑～即刻加 LINE 【s686vip】享受歡樂時光～" />
+		<title>大台北 s686vip</title>
+<meta name="description" content="即刻加 LINE 【s686vip】享受歡樂時光～" />
 <meta name="keywords" content="" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -166,7 +166,7 @@ var STYLE_PREFIX = 'wsite';
 		<div id="120149829353888199-form-parent" class="wsite-form-container"
 				 style="margin-top:10px;">
 			<ul class="formlist" id="120149829353888199-form-list">
-				<div class="paragraph" style="text-align:center;"><strong><font color="#515151">&#20840;&#30465;&#38914;&#32026;&#32654;&#22899;&#38642;&#38598;&#65292;&#26989;&#30028;&#21475;&#30865;&#36984;&#25799;&#65292;&#20778;&#36074;&#32085;&#33394;&#22909;&#22969;<br />&#8251;&#21491;&#19978;&#35282;&#26377;&#36984;&#21934;&#21487;&#20379;&#40670;&#36984;&#65292;&#24555;&#36895;&#20102;&#35299;&#21908;&#65281;&#8251;<br />&#20134;&#21487;&#40670;&#36984;&#19979;&#26041;&#36899;&#32080;&#65292;&#30452;&#25509;&#21152;LINE&#22909;&#21451;&#35426;&#21839;<br />往下滑有每日精選，供您快速挑選！</font></strong></div>
+				<div class="paragraph" style="text-align:center;"><strong><font color="#515151"><br />&#8251;&#21491;&#19978;&#35282;&#26377;&#36984;&#21934;&#21487;&#20379;&#40670;&#36984;&#65292;&#24555;&#36895;&#20102;&#35299;&#21908;&#65281;&#8251;<br />&#20134;&#21487;&#40670;&#36984;&#19979;&#26041;&#36899;&#32080;&#65292;&#30452;&#25509;&#21152;LINE&#22909;&#21451;&#35426;&#21839;<br />往下滑有每日精選，供您快速挑選！</font></strong></div>
 			</ul>
 			
 		</div>
@@ -341,7 +341,7 @@ var STYLE_PREFIX = 'wsite';
 			<div class="wsite-section-elements">
 				<h2 class="wsite-content-title" style="text-align:center;"><font size="7">&#10017;&#23450;&#40670;&#27155;&#40179; &#23560;&#26989;&#26381;&#21209;&#10017;</font></h2>
 
-<div class="paragraph" style="text-align:center;"><font color="#626262">VIP&#32218;&#19978;&#38928;&#32004;&#30475;&#29031; &#28961;&#35542;&#20320;&#35201;&#29289;&#32654;&#20729;&#24265;&#25110;&#26159;&#39640;&#27284;&#20778;&#36074;&#27491;&#22969; &#25105;&#20497;&#37117;&#33021;&#19968;&#27425;&#28415;&#36275;&#20320;&#12290;</font></div>
+<div class="paragraph" style="text-align:center;"><font color="#626262"></font></div>
 
 <div><div class="wsite-multicol"><div class="wsite-multicol-table-wrap" style="margin:0 -15px;">
 	
