--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh_TW">
 	<head>
-		<title>大台北 s686vip</title>
+		<title>s686vip</title>
 <meta name="description" content="即刻加 LINE 【s686vip】享受歡樂時光～" />
 <meta name="keywords" content="" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
